--- a/githubSite/main/css/style.css
+++ b/githubSite/main/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #f0e68c;
+    background-color: #0A0A23;
 }
 .wrapper{
     margin: 0 auto ;
@@ -11,45 +11,62 @@ body{
 .container{
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto 0 auto;
+    margin: 80px auto 0 auto;
 }
 .item{
+    position: relative;
     width: 200px;
     height: 150px;
-    padding: 0.5em 1em;
-    border-bottom: solid 6px #000000;
+    border: solid 2px #EFFF00;
     background-color: #696969;
     border-radius: 9px;
     background-size: cover; /* ボックス全体にフィット */
     background-position: center; /* 中央に配置 */
     background-repeat: no-repeat; /* 繰り返しを防ぐ */
     margin: 10px 10px 60px 60px;
-    text-align: left;
-    align-items: center;
+    color: #FF2ECC;
+    overflow: auto;
 }
-a {
+.gametittle{
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 50px;
+   background-color: rgba(28, 28, 28, 0.8);
+   text-align: center;
+}
+a{
     text-decoration: none;
-    color: black;
+    color: #FF2ECC;
     }
     a:hover{
         color: gold;
     }
-.gametittle{
-    width: 100%;
-    height: 30px;
-    margin-top: 170px;
-}
+
 #logo{
-    width: 450px;
-    height: 250px;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 #searchBox{
+    position: fixed;
+    top: 15px;
+    right: 15px;
     width: 200px;
     height: 40px;
     margin-left: 35%;
+    background-color: #00FFFF;
+    border: 5px solid #B026FF;
+    border-radius: 1rem;
+
 }
 
 #timer{
+    position: fixed;
+    top: 10px;
+    left: 10px;
     font-size: 20px;
     margin-right: 65%;
+    color: #00BFFF;
 }
