--- a/githubSite/games/multiTermo/style_phone.css
+++ b/githubSite/games/multiTermo/style_phone.css
@@ -36,7 +36,7 @@ body{
     display: none;
     width: 300px;
     height: 250px;
-    margin: 0 auto;
+    margin: 100px auto;
     flex-wrap: wrap;
     text-align: center;
     align-items: center;
@@ -48,8 +48,8 @@ table{
     margin: 0 auto;
 }
 table td{
-    width: 25px;
-    height: 25px;
+    width: 28px;
+    height: 28px;
     border-radius: 5px;
     border: 2px solid black;
     background-color: #708090;
