--- a/githubSite/games/numbers/style.css
+++ b/githubSite/games/numbers/style.css
@@ -9,6 +9,8 @@ body{
     display: none;
     width: 100%;
     height: 100%;
+    margin: 200px auto;
+
     justify-content: center; /* 水平方向に中央揃え */
     align-items: center;    /* 垂直方向に中央揃え */
     text-align: center;
@@ -54,8 +56,6 @@ h3{
     border: 1px solid black;
     background-color: aliceblue;
     font-size: 30px;
-   
-  
 }
 
 #table td:hover{
@@ -77,3 +77,73 @@ h3{
     height:30px;
     margin: 0 auto;
 }
+@media (max-width: 600px) {
+    h1{
+        position: fixed;
+        top: 35%;
+        left:30%;
+        font-size: 40px;
+    }
+    h2{
+        position: fixed;
+        top: 35%;
+        left:32%;
+        font-size: 40px;
+    }
+    h3{
+        position: fixed;
+        top: 50px;
+        right:34%;
+        font-size: 50px;
+    }
+    #start{
+        position: fixed;
+        top: 30%;
+        width: 200px;
+        height: 80px;
+        background-color: cornflowerblue;
+        color: aliceblue;
+        border: none;
+        font-size: 50px;
+        box-shadow: 5px 5px 10px #b2b2b2;
+    }
+    #start:hover{
+        background-color: aquamarine;
+    }
+    #table{
+        position: relative;
+        margin: 200px auto;
+        border-collapse: collapse; /* セル間の隙間を消去 */
+        border: none;
+        user-select: none;
+      
+    }
+    
+    #table td{
+        width: 50px;
+        height: 50px;
+        border: 1px solid black;
+        background-color: aliceblue;
+        font-size: 30px;
+    }
+    
+    #table td:hover{
+        cursor: pointer;
+    }
+    .home-btn{
+        position: fixed;
+        width: 36px;
+        height: 36px;
+        background-color: lightgray;
+        border-radius: 100px;
+        align-items: center;
+        top: 2%;
+        left: 2%;
+    }
+    #home-img{
+        display: flex;
+        width:30px; 
+        height:30px;
+        margin: 0 auto;
+    }
+  }
