--- a/githubSite/games/numbers/style.css
+++ b/githubSite/games/numbers/style.css
@@ -1,32 +1,28 @@
 body{
     display: flex;
-    justify-content: center; /* 水平方向に中央揃え */
-    align-items: center;    /* 垂直方向に中央揃え */
-    text-align: center;
-   background-color: #87cefa;
+    background-color: #87cefa;
 }
 #content{
     display: none;
     width: 100%;
     height: 100%;
-    margin: 200px auto;
-
-    justify-content: center; /* 水平方向に中央揃え */
-    align-items: center;    /* 垂直方向に中央揃え */
-    text-align: center;
 }
 h1{
-    margin: 20% auto;
+    position: fixed;
+    top: 33%;
+    left:38%;
     font-size: 80px;
 }
 h2{
-    
-    margin: 20% auto ;
+    position: fixed;
+    top: 30%;
+    left:38%;
     font-size: 80px;
 }
 h3{
     position: fixed;
-    margin: 50px auto 0 80%;
+    top: 30px;
+    right:12%;
     font-size: 70px;
 }
 #start{
@@ -36,7 +32,7 @@ h3{
     color: aliceblue;
     border: none;
     font-size: 50px;
-    margin: 20% auto;
+    margin: 18% auto;
     box-shadow:5px 5px 10px #b2b2b2;
 }
 #start:hover{
@@ -44,7 +40,7 @@ h3{
 }
 #table{
     border-collapse: collapse; /* セル間の隙間を消去 */
-    margin: 18% auto;
+    margin: 10% auto;
     border: none;
     user-select: none;
   
@@ -56,6 +52,8 @@ h3{
     border: 1px solid black;
     background-color: aliceblue;
     font-size: 30px;
+    align-items: center;
+    text-align: center;
 }
 
 #table td:hover{
