--- a/githubSite/games/numbers/style.css
+++ b/githubSite/games/numbers/style.css
@@ -1,28 +1,32 @@
 body{
     display: flex;
-    background-color: #87cefa;
+    justify-content: center; /* 水平方向に中央揃え */
+    align-items: center;    /* 垂直方向に中央揃え */
+    text-align: center;
+   background-color: #87cefa;
 }
 #content{
     display: none;
     width: 100%;
     height: 100%;
+    margin: 0px auto;
+    justify-content: center; /* 水平方向に中央揃え */
+    align-items: center;    /* 垂直方向に中央揃え */
+    text-align: center;
 }
 h1{
-    position: fixed;
-    top: 33%;
-    left:38%;
+    position: relative;
+    margin: 20% auto;
     font-size: 80px;
 }
 h2{
-    position: fixed;
-    top: 30%;
-    left:38%;
+    position: relative;
+    margin: 20% auto ;
     font-size: 80px;
 }
 h3{
-    position: fixed;
-    top: 30px;
-    right:12%;
+    position: relative;
+    margin: 0px auto 0 80%;
     font-size: 70px;
 }
 #start{
@@ -32,7 +36,7 @@ h3{
     color: aliceblue;
     border: none;
     font-size: 50px;
-    margin: 18% auto;
+    margin: 20% auto;
     box-shadow:5px 5px 10px #b2b2b2;
 }
 #start:hover{
@@ -40,7 +44,7 @@ h3{
 }
 #table{
     border-collapse: collapse; /* セル間の隙間を消去 */
-    margin: 10% auto;
+    margin: 15% auto;
     border: none;
     user-select: none;
   
@@ -52,8 +56,6 @@ h3{
     border: 1px solid black;
     background-color: aliceblue;
     font-size: 30px;
-    align-items: center;
-    text-align: center;
 }
 
 #table td:hover{
@@ -75,7 +77,16 @@ h3{
     height:30px;
     margin: 0 auto;
 }
-@media (max-width: 600px) {
+@media screen and (max-width: 764px) {
+    #content{
+        display: none;
+        width: 100%;
+        height: 100%;
+        margin: 120px auto;
+        justify-content: center; /* 水平方向に中央揃え */
+        align-items: center;    /* 垂直方向に中央揃え */
+        text-align: center;
+    }
     h1{
         position: fixed;
         top: 35%;
@@ -111,7 +122,7 @@ h3{
     #table{
         position: relative;
         margin: 200px auto;
-        border-collapse: collapse; /* セル間の隙間を消去 */
+        border-collapse: collapse; 
         border: none;
         user-select: none;
       
